Fix Carousel text overflow issue

--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -1241,6 +1241,9 @@ h2 span {
         height: 65px;
     }
 }
+::-webkit-scrollbar { 
+    display: none; 
+}
 
 
 
